# RustPasteClipboard

./: Cargo.toml  README.md  build.rs
src/: main.rs
