[package]
name = "pasteclipboard"
version = "0.2.0"
edition = "2021"
authors = ["sparky3387 <sparky3387@github.com>"]
description = "A simple tool to type text after a delay, compatible with Wayland."

[dependencies]
# For the graphical user interface (GUI)
gtk4 = "0.8"

# For GTK's main loop and timeout functionality
glib = "0.18"

# For handling the INI configuration file
configparser = "3.0.4"

# For finding the standard user config directory
directories = "5.0"

# For creating a virtual keyboard (uinput) to type on Wayland
evdev-rs = "0.6.2" # Use evdev-rs instead of evdev
anyhow = "1.0"      # Add anyhow for error handling

# For finding the xdo library
[build-dependencies]
pkg-config = "0.3"
